# vilexagent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.chainlit/translations/: vi-VN.json
app/: vilexagent_ui.py
docker/: docker-compose.yml
evaluation/: Untitled-1.json  benchmark.json  build_benchmark.py  run_evaluation.py
evaluation/results/custom_eval_result/: Baseline1_NaiveRAG_20260506_154737.csv  Baseline2_RAGRerank_20260506_154737.csv  ViLexAgent_20260506_154737.csv  comparison_20260506_154737.csv  summary.md
evaluation/results/final_eval/: Baseline1_NaiveRAG_20260507_113214.csv  Baseline2_RAGRerank_20260507_113214.csv  ViLexAgent_20260507_113214.csv  comparison_20260507_113214.csv  summary_report.md
evaluation/results/ragas_result/: Baseline1_NaiveRAG_20260506_111259.csv  Baseline2_RAGRerank_20260506_111259.csv  ViLexAgent_20260506_111259.csv  comparison_20260506_111259.csv  evaluation_summary_20260506.md
src/: verify_setup.py
src/agents/: cross_reference.py  domestic_retriever.py  graph.py  international_retriever.py  query_decomposer.py  state.py  synthesizer.py  test_retrievers.py
src/ingestion/: acquire.py  acquire_international.py  embed_and_index.py  embed_international.py  filter.py  join.py  parse.py  parse_international.py
src/retrieval/: baseline.py
src/utils/: json_utils.py  llm.py  logger.py  model_loader.py
tests/: test_decomposer.py
